--- a/src/index.html
+++ b/src/index.html
@@ -1,59 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Dogs Register</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Dogs Register</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
   <body>
-<form> 
-  add : <input type="text" name="add" id="id1"><br>
-  r : <input type="number" name="r" id="id2"><br>
-  s : <input type="text" name="isMale?"  id= "id3"><br>
-  a : <input type="number" name="a" id= "id4"><br>
-  c : <input type="number" name="c" id="id5"><br>
-</form>
-
-
-  <button class="btn btn-default btn-declareAnimal" type="button" data-id="0">DeclareAnimal</button>
-  <hr />
-
-<form>
-  id : <input type="text" name="id" id="ptb"><br>
-</form>
-    <button class="btn btn-default btn-proposeToBreed" type="button">ProposeToBreed</button>
-  <hr />
-
-
-  <form>
-  id1 : <input type="text" name="id1" id="ba1"><br>
-  id2 : <input type="text" name="id2" id="ba2"><br>
-</form>
-    <button class="btn btn-default btn-breedAnimal" type="button">BreedAnimal</button>
-  <hr />
 
 
 
-  
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#mod">DeclareAnimal</button>
+    <div id="mod" class="modal fade " tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Modal Header</h4>
+          </div>
+          <div class="modal-body">
+            <form> 
+              <div class= "form-group ">
+                <label  for="id1" class="control-label">Your ethereum address</label>
+                <input type="text" class=" form-control" name="add" id="id1">
+              </div>
+              <div class = "form-group">
+                <label for="id2" class="control-label">Dog breed</label>
+                <input type="number" class ="form-control" name="r" id="id2">
+              </div>
+              <div class = "form-group">
+                <label for="id3" class="control-label">Sex</label>
+                <input type="text" class ="form-control" name="isMale?"  id= "id3">
+              </div>
+              <div class= "form-group ">
+                <label for ="id4" class="control-label">Age</label>
+                <input type="number" class="form-control" name="a" id= "id4">
+              </div>
+              <div class= "form-group ">
+                <label for="id5" class="control-label">Category</label>
+                <input type="number" class="form-control" name="c" id="id5">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-default btn-declareAnimal" type="button" data-dismiss="modal">Process</button>
+            <hr />
+          </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/web3.min.js"></script>
-    <script src="js/truffle-contract.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#m">ProposeToBreed</button>
+  <div id="m" class="modal fade " tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Modal Header</h4>
+        </div>
+        <div class="modal-body">
+          <form> 
+            <div class= "form-group ">
+              <label  for="ptb" class="control-label">id</label>
+              <input type="text" class=" form-control" id="ptb">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-default btn-proposeToBreed" type="button" data-dismiss="modal">Process</button>
+          <hr />
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modal1">BreedAnimal</button>
+<div id="modal1" class="modal fade " tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <form> 
+          <div class= "form-group ">
+            <label  for="ba1" class="control-label">id1</label>
+            <input type="number" class=" form-control" id="ba1">
+          </div>
+          <div class = "form-group">
+            <label for="ba2" class="control-label">id2</label>
+            <input type="number" class ="form-control" id="ba2">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-default btn-breedAnimal" type="button" data-dismiss="modal">Process</button>
+        <hr />
+      </div>
+
+    </div>
+  </div>
+</div>
+</div>
+
+
+<!-- Large modal -->
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">ProposeToFight</button>
+<div id="myModal" class="modal fade " tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <form> 
+          <div class= "form-group ">
+            <label  for="did1" class="control-label">Your dog's Id</label>
+            <input type="number" class=" form-control" id="did1">
+          </div>
+          <div class = "form-group">
+            <label for="did2" class="control-label">Dog's opponent Id</label>
+            <input type="number" class ="form-control" id="did2">
+          </div> 
+          <div class = "form-group">
+            <label for="bid" class="control-label">Eth value to bid</label>
+            <input type="number" class ="form-control" id="bid">
+          </div> 
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-default btn-proposeToFight" type="button" data-dismiss="modal">Process</button>
+        <hr />
+      </div>
+
+    </div>
+  </div>
+</div>
+</div>
+
+
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modal2">AgreeToFight</button>
+<div id="modal2" class="modal fade " tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <form> 
+          <div class= "form-group ">
+            <label  for="fid" class="control-label">Fight Id</label>
+            <input type="number" class=" form-control" id="fid">
+          </div>
+          <div class = "form-group">
+            <label for="bid2" class="control-label">Eth value to bid</label>
+            <input type="number" class ="form-control" id="bid2">
+          </div> 
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-default btn-agreeToFight" type="button" data-dismiss="modal">Process</button>
+        <hr />
+      </div>
+
+    </div>
+  </div>
+</div>
+</div>
+
+
+
+
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
+<script src="js/web3.min.js"></script>
+<script src="js/truffle-contract.js"></script>
+<script src="js/app.js"></script>
+</body>
 </html>
