adding radios for sex selection in the dogRegister form and fixing BreedAnimal UI

--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,10 @@
                 <label for="id2" class="control-label">Dog breed</label>
                 <input type="number" class ="form-control" name="r" id="id2">
               </div>
-              <div class = "form-group">
-                <label for="id3" class="control-label">Sex</label>
-                <input type="text" class ="form-control" name="isMale?"  id= "id3">
+              <div class = "radio"> 
+                <p class="control-label"><b>Sex</b></p>
+                <label class="radio-inline"><input type ="radio" name="gender"  value = "true" id= "male"> M</label>
+                <label class="radio-inline"><input type ="radio" name="gender"  value = "" id= "female"> F</label>
               </div>
               <div class= "form-group ">
                 <label for ="id4" class="control-label">Age</label>
