adding some functions to the UI

--- a/src/index.html
+++ b/src/index.html
@@ -194,6 +194,130 @@
 
 
 
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modal3">createAuction</button>
+<div id="modal3" class="modal fade " tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <form> 
+          <div class= "form-group ">
+            <label  for="dogIdAuc" class="control-label">Dog Id</label>
+            <input type="number" class=" form-control" id="dogIdAuc">
+          </div>
+          <div class = "form-group">
+            <label for="startingPrice" class="control-label">Starting Price in ETH</label>
+            <input type="number" class ="form-control" id="startingPrice">
+          </div> 
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-default btn-createAuction" type="button" data-dismiss="modal">Process</button>
+        <hr />
+      </div>
+
+    </div>
+  </div>
+</div>
+</div>
+
+
+
+
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modal4">bidAuction</button>
+<div id="modal4" class="modal fade " tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <form> 
+          <div class= "form-group ">
+            <label  for="auctionId" class="control-label">Auction Id</label>
+            <input type="number" class=" form-control" id="auctionId">
+          </div>
+          <div class = "form-group">
+            <label for="bidAuc" class="control-label">Bid</label>
+            <input type="number" class ="form-control" id="bidAuc">
+          </div> 
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-default btn-bidAuction" type="button" data-dismiss="modal">Process</button>
+        <hr />
+      </div>
+
+    </div>
+  </div>
+</div>
+</div>
+
+
+
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modal5">updateBid</button>
+<div id="modal5" class="modal fade " tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <form> 
+          <div class= "form-group ">
+            <label  for="updateBidAucId" class="control-label">Auction Id</label>
+            <input type="number" class=" form-control" id="updateBidAucId">
+          </div>
+          <div class = "form-group">
+            <label for="bidUpBid" class="control-label">New Bid</label>
+            <input type="number" class ="form-control" id="bidUpBid">
+          </div> 
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-default btn-updateBid" type="button" data-dismiss="modal">Process</button>
+        <hr />
+      </div>
+
+    </div>
+  </div>
+</div>
+</div>
+
+
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modal6">claimAuction</button>
+<div id="modal6" class="modal fade " tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <form> 
+          <div class= "form-group ">
+            <label  for="claimAucId" class="control-label">Auction Id</label>
+            <input type="number" class=" form-control" id="claimAucId">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-default btn-claimAuction" type="button" data-dismiss="modal">Process</button>
+        <hr />
+      </div>
+
+    </div>
+  </div>
+</div>
+</div>
+
+
+
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
